feat: update for iPhone

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --status-bar-background: var(--light);
+  background: var(--status-bar-background);
 }
 
 body {
@@ -142,8 +144,8 @@ button#pwa-refresh {
 .clock-container {
   position: absolute;
   text-align: center;
-  bottom: 0;
-  padding-bottom: 1rem;
+  bottom: env(safe-area-inset-bottom, 0);
+  padding-bottom: calc(1rem + env(safe-area-inset-bottom, 0));
   left: 0;
   width: 100%;
 }
@@ -159,6 +161,7 @@ button#pwa-refresh {
 .dark-theme {
   background: var(--dark);
   color: var(--light);
+  --status-bar-background: var(--dark);
 
   & .clock-time {
     color: var(--light);
@@ -169,17 +172,3 @@ button#pwa-refresh {
     mix-blend-mode: screen;
   }
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    background: var(--dark);
-    color: var(--light);
-  }
-  .clock-time {
-    color: var(--light);
-  }
-  .box-breathing-box {
-    background: var(--light);
-    mix-blend-mode: screen;
-  }
-} */
