feat: use transforms instead of layout changing properties for smoother animations with compositor API

--- a/src/style.css
+++ b/src/style.css
@@ -107,36 +107,21 @@ button#pwa-refresh {
   animation-delay: var(--delay);
   border-radius: var(--radius-circle);
   mix-blend-mode: multiply;
+  transform-origin: center;
 }
 @keyframes breathe {
-  0% {
-    transform: rotate(0deg);
-    width: var(--size-circle);
-    height: var(--size-circle);
+  0%,
+  100% {
+    transform: rotate(0deg) scale(1);
     border-radius: var(--radius-circle);
   }
-  25% {
-    transform: rotate(90deg);
-    width: var(--size-square);
-    height: var(--size-square);
-    border-radius: var(--radius-square);
-  }
+  25%,
   50% {
-    transform: rotate(90deg);
-    width: var(--size-square);
-    height: var(--size-square);
+    transform: rotate(90deg) scale(4);
     border-radius: var(--radius-square);
   }
   75% {
-    transform: rotate(180deg);
-    width: var(--size-circle);
-    height: var(--size-circle);
-    border-radius: var(--radius-circle);
-  }
-  100% {
-    transform: rotate(180deg);
-    width: var(--size-circle);
-    height: var(--size-circle);
+    transform: rotate(180deg) scale(1);
     border-radius: var(--radius-circle);
   }
 }
